--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,26 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: 70px calc(100% - 70px);
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
+.App-header__logo{
+  width: 25px;
+  margin-left: 15px;
+}
+.App-header{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+}
+.App-header div{
+text-align: right;
+}
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +32,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+.App-customers{
+  display: grid;
+  height: fit-content;
+  grid-template-columns: max-content;
+  justify-content: center;
+  gap: 15px;
+}
+.App-customers div{
+  text-align: left;
+}
+.App-customers div a{
+  text-decoration: none;
+  color: wheat;
+}
+.App-customers div a:hover{
+  color: goldenrod;
 }
